objects/advpm__Advologix_Planner_Options_S1__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>System settings used by Advologix internally.</description>
    <fields>
        <fullName>advpm__Cal_Hide_Completed_Tasks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(Cal) Hide Completed Tasks?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Cal_Show_Activities_With_Matters_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(Cal) Show Activities With Matters Only?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Cal_Show_Day_View__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(Cal) Show Day View?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Cal_Show_Events__c</fullName>
        <defaultValue>true</defaultValue>
        <label>(Cal) Show Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Cal_Show_Matter_Key_Dates__c</fullName>
        <defaultValue>true</defaultValue>
        <label>(Cal) Show Matter Key Dates?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Cal_Show_My_Activities_Only__c</fullName>
        <defaultValue>true</defaultValue>
        <label>(Cal) Show My Activities Only?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Cal_Show_My_Matters_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(Cal) Show My Matters Only?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Cal_Show_Related_Matters_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(Cal) Show Related Matters Data?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Cal_Show_Tasks__c</fullName>
        <defaultValue>true</defaultValue>
        <label>(Cal) Show Tasks?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Cal_Show_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(Cal) Show Time?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Cal_Show_Weekends__c</fullName>
        <defaultValue>true</defaultValue>
        <label>(Cal) Show Weekends</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Cal_Show_n_Days__c</fullName>
        <defaultValue>1</defaultValue>
        <label>(Cal) Show n-Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>advpm__Gantt_Hide_Completed_Tasks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(Gantt) Hide Completed Tasks?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Gantt_Show_Events__c</fullName>
        <defaultValue>true</defaultValue>
        <label>(Gantt) Show Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Gantt_Show_Matter_Key_Dates__c</fullName>
        <defaultValue>true</defaultValue>
        <label>(Gantt) Show Matter Key Dates?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Gantt_Show_My_Activities_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(Gantt) Show My Activities Only?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Gantt_Show_My_Matters_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(Gantt) Show My Matters Only?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Gantt_Show_Related_Matters_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(Gantt) Show Related Matters Data?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Gantt_Show_Tasks__c</fullName>
        <defaultValue>true</defaultValue>
        <label>(Gantt) Show Tasks?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__MyMatters_Table_State_Settings_Mobile__c</fullName>
        <label>(MyMatters) Table State Settings Mobile</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__MyMatters_Table_State_Settings__c</fullName>
        <label>(MyMatters) Table State Settings</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Advologix Planner Options (S1)</label>
</CustomObject>